name:                haskell-html
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-html#readme
license:             MIT
license-file:        LICENSE
author:              Matthias Metzger
maintainer:          noobymatze@yahoo.de
copyright:           2017 Matthias Metzger
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


executable example
  hs-source-dirs:      example
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , haskell-html
                     , text


library
  hs-source-dirs:      src
  exposed-modules:     Text.Html
                     , Text.Html.Attributes
                     , Text.Html.Render
  other-modules:       Text.Html.Internal
  build-depends:       base >= 4.7 && < 5
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-html
